# CRAckingTheGame

./: README.md
Funcional/: CHANGELOG.md  CRAckingTheGame.cabal  README.md
Funcional/app/: Main.hs  Tabuleiro.hs
Funcional/app/Controllers/: CasaController.hs  CraController.hs  DeckController.hs  JogoController.hs  TabuleiroController.hs
Funcional/app/Models/: Carta.hs  Casa.hs  Jogador.hs  Nota.hs  Quiz.hs  Tabuleiro.hs
Funcional/database/: casas.json  deck.json  menu.txt  notas.json  tabuleiro.txt
Logico/: README.md  rascunho.pl
Logico/Controllers/: CraController.pl  DeckController.pl  JogoController.pl  TabuleiroController.pl
Logico/app/: Main.pl
Logico/app/Controllers/: CasaController.pl  CraController.pl  JogoController.pl  MenuController.pl  MultiplayerController.pl  TabuleiroController.pl
Logico/app/Models/: Carta.pl  Casa.pl  Nota.pl  Quiz.pl
Logico/database/: casas.json  deck.json  menu.txt  tabuleiro.txt
