cabal-version:      2.4
name:               CRAckingTheGame
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable CRAckingTheGame
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Controllers.CasaController,
                      Controllers.DeckController,
                      Controllers.JogoController,
                      Controllers.TabuleiroController,
                      Models.Casa,
                      Models.Carta,
                      Models.Quiz

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      aeson,
                      ansi-terminal,
                      bytestring,
                      directory,
                      random,
                      random-shuffle,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
